fix the play video error - play video depend on the winner and change dialog shown info